Align and margin fix. new font

--- a/RoilyGlass.css
+++ b/RoilyGlass.css
@@ -1,13 +1,24 @@
 html {
     min-height: 100vh;
     margin: 0;
-    font-family: 'Roboto';
+    font-family: 'Titillium Web', sans-serif;
     background-image: url('https://psv4.userapi.com/c856320/u37259857/docs/d2/c81b2e5e8bc5/san-francisco-san-francisco-2725.jpg');
     background-size: 130% ;
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
 
+.glass {
+    position: absolute;
+    min-height: 100vh;
+    margin: 0;
+    background-image: url('https://psv4.userapi.com/c856320/u37259857/docs/d2/c81b2e5e8bc5/san-francisco-san-francisco-2725.jpg');
+    background-size: 130% ;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    filter: blur(4px);
+    z-index: 1;
+}
 
 body {
     min-height: 100vh;
@@ -26,14 +37,16 @@ body {
     margin-left: 30px;
     margin-right: 30px;
     opacity: 1;
+    
+    position: relative;
+}
+
+.text {
+    margin: 20px 60px;
     font-size: 20px;
 }
 
-.content p {
-    margin: 40px;
-}
-
-.content p::first-letter {
+.text::first-letter {
     font-size: 30px;
     color: #313131;
     padding-bottom: 3px;
@@ -48,9 +61,9 @@ body {
 
 .sitenav ul {
     padding: 0;
-    font-size: 12px;
+    font-size: 14px;
     text-transform: uppercase;
-    letter-spacing: 2px;
+    letter-spacing: 3px;
 }
 
 .sitenav li {
@@ -84,6 +97,7 @@ body {
     text-transform: uppercase;
     letter-spacing: 2px;
     cursor: pointer;
+    font-weight: 600;
 }
 
 .login-button:hover {
@@ -96,16 +110,21 @@ body {
     text-align: center;
     text-transform: uppercase;
     text-shadow: rgba(0, 0, 0, 0.4);
+    margin-top: 5vh;
+}
+
+.cards {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 div.card {
-    position: relative;
-    display: inline-flex;
-    flex-direction: row;
-    flex-flow: wrap;
-    align-items: flex-start;
-    align-content: stretch;
-    justify-content: flex-start;
+    display: flex;
+    flex-direction: column;
     width: 12vw;
     border: 1px solid grey;
     margin: 30px;
@@ -114,6 +133,7 @@ div.card {
     border-radius: 5px;
     opacity: 0.8;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    font-size: 18px;
     
 }
 
@@ -123,6 +143,7 @@ div.card .card-label {
     letter-spacing: 1px;
     font-weight: 600;
     margin-top: 10px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
 }
 
 .hor-line {
@@ -151,14 +172,18 @@ footer {
     font-size: 18px;
     padding: 20px;
     background-color: white;
+    opacity: 0.8;
     margin-bottom: 0;
     bottom: 0px;
-    text-align: center;
+    align-items: center;
+    display: flex;
+    align-content: flex-end;
+    justify-content: space-around;
 }
 
 footer a {
     text-decoration: none;
     color: black;
     letter-spacing: 3px;
-
+    text-align: center;
 }
